[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = 'when/version.py'

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = [
    '/README.md',
    '/Makefile',
    '/when',
]

[tool.pdm.dev-dependencies]
linting = [
    "black>=23.3.0",
    "mypy>=1.4.1",
    "isort>=5.11.5",
    "setuptools>=68.0.0",
]
build = [
    "build>=0.10.0",
    "twine>=4.0.2",
]

[project]
name = "when-py"
version = "0.1.0"
description = "A natural language date/time parser with pluggable rules written in Python"
authors = [
    {name = "fanchunke", email = "fanchunke1991@163.com"},
]
dependencies = []
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Programming Language :: Python',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: MIT License',
    'Operating System :: Unix',
    'Operating System :: POSIX :: Linux',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Internet',
]

[tool.black]
color = true
line-length = 120
target-version = ['py310']
skip-string-normalization = true

[tool.isort]
profile = "black"

[project.urls]
Homepage = 'https://github.com/fanchunke/when-py'
Source = 'https://github.com/fanchunke/when-py'